classDiagram
    direction TB

    %% --- Core Domain: Vehicle Hierarchy ---
    class Vehicle {
        <<abstract>>
        - string vehicleID
        - string model
        - int capacity
        - float rentalRate
        - VehicleStatus status
        + Vehicle(string id, string model, int capacity, float rate)
        + ~Vehicle()*
        + string getID() const
        + string getModel() const
        + int getCapacity() const
        + float getRentalRate() const
        + VehicleStatus getStatus() const
        + bool getAvailable() const
        + void setStatus(VehicleStatus newStatus)
        + void setAvailable(bool available)
        + string getCategory() const*
        + float calculateCost(int days)*
        + void displayInfo()
        + void displayRow() const
        + void displayRowSimple() const
        + float calculateDiscountedCost(int days)
        + float getDiscountPercentage(int days) const
        # string getHeaderTitle() const*
        # string getCategoryDisplay() const*
        # string getCapacityUnit() const
        # void displayExtraInfo() const
        # string getStatusString() const
    }

    class Economy {
        + Economy(string id, string model, int capacity, float rate)
        + string getCategory() const
        + float calculateCost(int hours)
        # string getHeaderTitle() const
        # string getCategoryDisplay() const
        # void displayExtraInfo() const
    }

    class Luxury {
        - string luxuryFeatures
        + Luxury(string id, string model, int capacity, float rate, string features)
        + string getLuxuryFeatures() const
        + string getCategory() const
        + float calculateCost(int hours)
        # string getHeaderTitle() const
        # string getCategoryDisplay() const
    }

    class SUV {
        + SUV(string id, string model, int capacity, float rate)
        + string getCategory() const
        + float calculateCost(int hours)
        # string getHeaderTitle() const
        # string getCategoryDisplay() const
        # string getCapacityUnit() const
        # void displayExtraInfo() const
    }

    class Van {
        + Van(string id, string model, int capacity, float rate)
        + string getCategory() const
        + float calculateCost(int days)
        # string getHeaderTitle() const
        # string getCategoryDisplay() const
        # string getCapacityUnit() const
        # void displayExtraInfo() const
    }

    Vehicle <|-- Economy
    Vehicle <|-- Luxury
    Vehicle <|-- SUV
    Vehicle <|-- Van

    %% --- User Hierarchy ---
    class User {
        <<abstract>>
        - string userID
        - string username
        - string name
        - string cnic
        - string password
        + User(string id, string username, string name, string cnic, string password)
        + ~User()*
        + string getID() const
        + string getUsername() const
        + string getName() const
        + string getCNIC() const
        + string getPassword() const
        + bool authenticate(string inputPassword) const
        + void showMenu()*
        + string getRole() const*
    }

    class Admin {
        + Admin(string id, string username, string name, string cnic, string password)
        + void showMenu()
        + string getRole() const
        + void showDashboard(const vector~Vehicle*~& fleet)
        + void addVehicle(vector~Vehicle*~& fleet)
        + void removeVehicle(vector~Vehicle*~& fleet)
        + void removeUser(vector~User*~& users, FileHandler& fh)
        + void salePurchaseModule(vector~Vehicle*~& fleet, vector~User*~& users, FileHandler& fh)
        + void viewAllRecords(const vector~Vehicle*~& fleet, const vector~User*~& users)
        + void viewTransactionHistory()
        - bool hasActiveRentals(const string& userID, FileHandler& fh)
    }

    class Customer {
        - vector~string~ rentalHistory
        + Customer(string id, string username, string name, string cnic, string password)
        + void showMenu()
        + string getRole() const
        + void viewRentalHistory()
        + void addToHistory(const string& record)
        + void rentVehicle(vector~Vehicle*~& fleet, FileHandler& fh)
        + bool processRental(string vehicleID, vector~Vehicle*~& fleet, FileHandler& fh)
        + void returnVehicle(vector~Vehicle*~& fleet, FileHandler& fh)
    }

    User <|-- Admin
    User <|-- Customer

    %% --- Transaction Hierarchy ---
    class Transaction {
        <<abstract>>
        # string transactionID
        # Vehicle* vehicle
        # Customer* customer
        # string date
        + Transaction(string id, Vehicle* v, Customer* c, string date)
        + ~Transaction()*
        + void finalise()*
        + string getTransactionID() const
        + string getDate() const
    }

    class RentalTransaction {
        - string startTime
        - string endTime
        - int daysRented
        - float totalBill
        + RentalTransaction(string id, Vehicle* v, Customer* c, string date, string start)
        + void finalise()
        + void setEndTime(string end, int days)
        + float calculateBill()
    }

    class SaleTransaction {
        - float salePrice
        + SaleTransaction(string id, Vehicle* v, Customer* c, string date, float price)
        + void finalise()
    }

    Transaction <|-- RentalTransaction
    Transaction <|-- SaleTransaction

    %% --- Associations & Composition ---
    Transaction o-- Vehicle : "references"
    Transaction o-- Customer : "references"

    class InspectionReport {
        - Vehicle* inspectedVehicle
        - User* inspector
        - string fuelLevel
        - string damageNotes
        - float mileage
        - string condition
        - string evaluationRemarks
        - string date
        + InspectionReport(Vehicle* v, User* u)
        + void fillReport()
        + void displayReport() const
        + void saveToFile(ofstream& out) const
        + float getDamageFee() const
        + string getDate() const
    }

    InspectionReport o-- Vehicle : "references"
    InspectionReport o-- User : "references"

    %% --- System Orchestration ---
    class FileHandler {
        + vector~Vehicle*~ loadVehicles()
        + void saveVehicles(const vector~Vehicle*~& fleet)
        + vector~User*~ loadUsers()
        + void saveUsers(const vector~User*~& users)
        + vector~Transaction*~ loadTransactions()
        + void saveTransactions(const vector~Transaction*~& txns)
        + void appendTransaction(const string& type, const string& vID, const string& cID, float amount, const string& date)
        + void loadTransactionsIntoHistory(vector~User*~& users)
        + string getRentalStartDate(const string& vID, const string& cID)
        + void saveInspection(const InspectionReport& report)
        + string generateNextUserID(const vector~User*~& users)$
        + string generateNextVehicleID(const vector~Vehicle*~& fleet)$
    }

    class SearchEngine {
        - vector~Vehicle*~& fleet
        + SearchEngine(vector~Vehicle*~& f)
        + vector~Vehicle*~ searchByCategory(char type)
    }

    class TripPlanner {
        + void planTrip(string source, string destination, float distance, float budget, int passengers, const vector~Vehicle*~& fleet)
    }

    class MenuHandler {
        - vector~Vehicle*~& fleet
        - vector~User*~& users
        - FileHandler& fh
        + MenuHandler(vector~Vehicle*~& fleet, vector~User*~& users, FileHandler& fh)
        + void runMainMenu()
        + void handleRegistration()
        + void handleLogin()
        + void handleSearch(SearchEngine& engine, vector~Vehicle*~& fleet, Customer* customer, FileHandler* fh)$
        + void handleTripPlanning(TripPlanner& planner, vector~Vehicle*~& fleet, Customer* customer, FileHandler* fh)$
        - void adminSession(User* currentUser)
        - void customerSession(User* currentUser)
    }

    MenuHandler o-- Vehicle : "manages"
    MenuHandler o-- User : "manages"
    MenuHandler --> FileHandler : "uses"
    MenuHandler --> SearchEngine : "invokes"
    MenuHandler --> TripPlanner : "invokes"

    class Validator {
        <<utility>>
        + bool isNonNegative(int value)$
        + bool isNonNegative(float value)$
        + bool isPositive(int value)$
        + bool isPositive(float value)$
        + bool inRange(int value, int min, int max)$
        + bool inRange(float value, float min, float max)$
        + bool isValidID(const string& id)$
        + bool isValidDate(const string& date)$
        + bool isValidPhone(const string& phone)$
        + bool isValidCNIC(const string& cnic)$
        + bool isValidName(const string& name)$
        + string getCurrentDate()$
        + int calculateDays(const string& start, const string& end)$
        + bool isAlphaOnly(const string& str, bool allowSpaces)$
        + bool isAlphanumeric(const string& str)$
    }

    class VehicleStatus {
        <<enumeration>>
        Available
        Rented
        Sold
    }
    Vehicle -- VehicleStatus
